--- a/GitHubUsers/Resource/Base.lproj/Main.storyboard
+++ b/GitHubUsers/Resource/Base.lproj/Main.storyboard
@@ -262,27 +262,28 @@
                                                     </subviews>
                                                 </stackView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="DUS-HK-C0c">
-                                                    <rect key="frame" x="302.5" y="15.5" width="60.5" height="39"/>
+                                                    <rect key="frame" x="315.5" y="14" width="47.5" height="42"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eeu-um-IDL">
-                                                            <rect key="frame" x="0.0" y="0.0" width="60.5" height="27"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="47.5" height="27"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                                             <state key="normal" title="Visit"/>
                                                             <connections>
                                                                 <action selector="viewRepoButtonClicked:" destination="3Aa-Na-gpW" eventType="touchUpInside" id="fpC-Xg-euP"/>
                                                             </connections>
                                                         </button>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pZh-Ww-HzG">
-                                                            <rect key="frame" x="0.0" y="27" width="60.5" height="12"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" horizontalCompressionResistancePriority="746" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="pZh-Ww-HzG">
+                                                            <rect key="frame" x="0.0" y="27" width="47.5" height="15"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="score: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i5N-7p-Sxv">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="33" height="12"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AmY-SV-r9G">
-                                                                    <rect key="frame" x="33" y="0.0" width="27.5" height="12"/>
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fork" translatesAutoresizingMaskIntoConstraints="NO" id="Qhv-uM-B2j">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="15" height="15"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="15" id="CWX-oj-Zga"/>
+                                                                        <constraint firstAttribute="height" constant="15" id="SXm-Og-9U3"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AmY-SV-r9G">
+                                                                    <rect key="frame" x="20" y="0.0" width="27.5" height="15"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -293,9 +294,9 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="DUS-HK-C0c" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="yn3-oT-0F2" secondAttribute="trailing" constant="10" id="6id-kh-Udf"/>
                                                 <constraint firstItem="DUS-HK-C0c" firstAttribute="centerY" secondItem="YtH-XD-NEY" secondAttribute="centerY" id="9SY-Gp-U3U"/>
                                                 <constraint firstAttribute="trailing" secondItem="DUS-HK-C0c" secondAttribute="trailing" constant="12" id="DNe-Zm-Ul3"/>
+                                                <constraint firstItem="DUS-HK-C0c" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="KTe-I9-qT3" secondAttribute="trailing" constant="20" id="MLe-kZ-VxI"/>
                                                 <constraint firstItem="KTe-I9-qT3" firstAttribute="leading" secondItem="YtH-XD-NEY" secondAttribute="leading" constant="12" id="V38-Fg-9LA"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="DUS-HK-C0c" secondAttribute="bottom" constant="5" id="YZC-y1-95i"/>
                                                 <constraint firstItem="KTe-I9-qT3" firstAttribute="top" secondItem="YtH-XD-NEY" secondAttribute="top" constant="12" id="dxf-MD-tPQ"/>
@@ -304,10 +305,10 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="forks" destination="AmY-SV-r9G" id="Fh9-eR-bOG"/>
                                             <outlet property="repoDesriptionLabel" destination="X8u-J4-Ww5" id="r5c-JA-c1x"/>
                                             <outlet property="repoNameLabel" destination="yn3-oT-0F2" id="eKv-Sf-bky"/>
                                             <outlet property="viewRepoButton" destination="eeu-um-IDL" id="J9r-UH-gXu"/>
-                                            <outlet property="watchCountLabel" destination="i5N-7p-Sxv" id="YPs-x6-bYK"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -340,6 +341,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="fork" width="512" height="512"/>
         <image name="userImage" width="2240" height="2240"/>
     </resources>
 </document>
